# temporal-strips

./: .gitignore  Dockerfile  LICENSE  README.md  Tiltfile  compose.yaml  pyproject.toml
.claude/: settings.json
docker/: tempo.yaml
docker/grafana/provisioning/datasources/: datasources.yaml
src/temporal_planner/: client.py  models.py  worker.py
src/temporal_planner/activities/: drop.py  get_state.py  move.py  perceive.py  pick_up.py  plan.py
src/temporal_planner/domain/: definition.py  state.py
src/temporal_planner/workflows/: achieve.py
src/temporal_strips/: client.py  worker.py
src/temporal_strips/activities/: drop.py  get_state.py  move.py  perceive.py  pick_up.py  plan.py
src/temporal_strips/domain/: definition.py  state.py
src/temporal_strips/workflows/: achieve.py
tests/: test_models.py  test_state.py
