[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[project]
name = "temporal-strips"
version = "0.1.0"
description = "AI planning with unified-planning executed as Temporal workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.9.0",
    "temporalio[opentelemetry]",
    "unified-planning>=1.3.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "up-pyperplan>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
